packages/hooks-test/tests/snapshots/return_impl_trait__use_lt.snap
---
source: packages/hooks-test/tests/return_impl_trait.rs
expression: "use_lt::hook_impl_code()"
---
fn use_lt<'a>(
    v: &'a impl Display,
) -> impl ::hooks::core::UpdateHookUninitialized<
    Uninitialized = impl ::hooks::core::HookPollNextUpdate + ::hooks::core::HookUnmount + ::core::default::Default + ::hooks::core::Captures<
        &'a (),
    >,
    Hook = impl ::hooks::core::Hook + for<'hook> ::hooks::core::HookValue<
        'hook,
        Value = &'a (impl Display + 'a),
    > + ::hooks::core::Captures<&'a ()>,
> {
    enum __HooksImplNever {}
    struct __HooksValueOfThisHook<'a, HooksImplTrait0: Display + 'a> {
        __: (__HooksImplNever, &'a (), ::core::marker::PhantomData<HooksImplTrait0>),
    }
    impl<'hook, 'a, HooksImplTrait0: Display + 'a> ::hooks::core::HookValue<'hook>
    for __HooksValueOfThisHook<'a, HooksImplTrait0> {
        type Value = &'a HooksImplTrait0;
    }
    ::hooks::core::fn_hook::use_fn_hook::<
        __HooksValueOfThisHook<'a, _>,
        _,
        _,
    >(move |_: ::core::pin::Pin<&mut ::hooks::core::HookTuple<()>>| { v })
}
