packages/hooks-test/tests/snapshots/return_impl_trait__use_type_param.snap
---
source: packages/hooks-test/tests/return_impl_trait.rs
expression: "use_type_param::hook_impl_code()"
---
fn use_type_param<T: Default + Display>() -> impl ::hooks::core::UpdateHookUninitialized<
    Uninitialized = impl ::hooks::core::HookPollNextUpdate + ::hooks::core::HookUnmount + ::core::default::Default,
    Hook = impl ::hooks::core::Hook + for<'hook> ::hooks::core::HookValue<
        'hook,
        Value = impl Display,
    >,
> {
    enum __HooksImplNever {}
    struct __HooksValueOfThisHook<T: Default + Display, HooksImplTrait0: Display> {
        __: (
            __HooksImplNever,
            ::core::marker::PhantomData<T>,
            ::core::marker::PhantomData<HooksImplTrait0>,
        ),
    }
    impl<
        'hook,
        T: Default + Display,
        HooksImplTrait0: Display,
    > ::hooks::core::HookValue<'hook> for __HooksValueOfThisHook<T, HooksImplTrait0> {
        type Value = HooksImplTrait0;
    }
    ::hooks::core::fn_hook::use_fn_hook::<
        __HooksValueOfThisHook<T, _>,
        _,
        _,
    >(move |_: ::core::pin::Pin<&mut ::hooks::core::HookTuple<()>>| { T::default() })
}
